@@ -1,14 +1,15 @@
 package L1_optimize_tools;
 
-import lombok.Cleanup;
 import lombok.SneakyThrows;
 import lombok.extern.log4j.Log4j;
+import org.springframework.util.StopWatch;
 
 import java.util.ArrayList;
 import java.util.concurrent.TimeUnit;
 
 
-// -Xms20M -Xmx20M
+// -Xms20M -Xmx20M -XX:+PrintFlagsFinal -XX:+PrintTenuringDistribution -XX:+PrintCommandLineFlags  -XX:+PrintGCDetails
+// -XX:+PrintHeapAtGC -Xloggc:./logs/gc-%t.log
 @Log4j
 public class C1_JDK_Tools {
 
@@ -17,13 +18,20 @@ public class C1_JDK_Tools {
     public static void main(String[] args) {
         ArrayList<byte[]> list = new ArrayList<>(10);
 
+        StopWatch sw = new StopWatch();
+
+
         LOOP: while (true){
             try{
-                list.add(new byte[2 * 1024 * 1024]);
-                log.info("add 2M ");
-                TimeUnit.SECONDS.sleep(2);
+                sw.start();
+                list.add(new byte[1 * 1024 * 1024]);
+                sw.stop();
+                log.info("add 2M, cost time: " + sw.getLastTaskTimeMillis() + " ms");
+                TimeUnit.SECONDS.sleep(1);
             }catch (OutOfMemoryError oom){
                 list.clear();
+                if (sw.isRunning())
+                    sw.stop();
                 log.error("OOM了! 不过没关系，我帮你把内存清了");
                 continue LOOP;
             }
